# og

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  og.rs  server.rs
static/: styles.css
templates/: base.html  index.html  results.html
