[package]
name = "og"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.13"
rust-embed = { version = "8", features = ["mime-guess"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
url = "2"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
